# simple-chatbot

./: .gitignore  README.md  config.yml  pyproject.toml
mobile/: .gitignore  App.tsx  README.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/ios/: Podfile
mobile/ios/LibreChatMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
mobile/ios/LibreChatMobile.xcodeproj/: project.pbxproj
mobile/src/components/: CharacterChip.tsx  CharacterPickerModal.tsx  Composer.tsx  ContextBar.tsx  EditScreenHeader.tsx  EmptyState.tsx  Field.tsx  FloatingActionButton.tsx  MessageBubble.tsx  RichText.tsx  SpeakerPickerSheet.tsx  ThinkingBlock.tsx
mobile/src/constants/: character-palette.ts  config.ts  theme.ts
mobile/src/hooks/: useCharacters.ts  useChat.ts  useSessions.ts
mobile/src/navigation/: AppNavigator.tsx
mobile/src/screens/: CharacterEditScreen.tsx  CharactersScreen.tsx  ChatScreen.tsx  SessionEditScreen.tsx  SessionsScreen.tsx  SettingsScreen.tsx  SplashScreen.tsx
mobile/src/services/: api.ts  compression.ts  ollama.ts
mobile/src/store/: characters-cache.ts  chat-store.ts  settings-store.ts
mobile/src/types/: db.ts  navigation.ts  ollama.ts
mobile/src/utils/: error.ts  format.ts
src/libre_chat/: __init__.py  __main__.py  chatbot.py  cli.py  config.py  db.py  models.py  ui.py
src/libre_chat/server/: __init__.py  app.py  engine.py  helpers.py  schemas.py
src/libre_chat/server/routers/: __init__.py  characters.py  health.py  (+2 more)
(+4 files in other folders)
